Fix stylesheet rel on font

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/grids.css" rel="stylesheet">
     <link href="css/type.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=roboto+slab:400,700" rel="stylessheet">
+    <link href="https://fonts.googleapis.com/css?family=roboto+slab:400,700" rel="stylesheet">
   </head>
   <body>
     <div class="card chop">
