--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Using CSS Variables</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
-  <link href="css/grids.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=roboto+slab:400,700" rel="stylesheet">
